--- a/live-literals/styles/tufte.css
+++ b/live-literals/styles/tufte.css
@@ -210,6 +210,8 @@ div.fullwidth, table.fullwidth { width: 100%; }
 div.table-wrapper { overflow-x: auto;
                     font-family: "Trebuchet MS", "Gill Sans", "Gill Sans MT", sans-serif; }
 
+@media print { html { font-size: 8px; } }
+
 @media screen and (max-width: 760px) { p, footer { width: 90%; }
                                        pre.code { width: 87.5%; }
                                        ul { width: 85%; }
